# api-rs

./: .gitignore  Cargo.toml  Dockerfile  database.db  flake.nix  readme.md  rustfmt.toml  shell.nix
api/: Cargo.toml
api/src/: bus.rs  cidr.rs  event.rs  main.rs  migrate.rs  models.rs  routes.rs  store.rs  websocket.rs
api/src/data/: paths.rs
api/src/event/: generator.rs  link.rs  log.rs
db/: Cargo.toml
db/src/: data.rs  drivers.rs  helper.rs  interface.rs  lib.rs
db/src/drivers/: json.rs  sqlite.rs
db/src/drivers/json/: data.rs
db/src/migrations/: 01-create-user.sql  01_create-user.sql  02-create-account.sql  02_create-account.sql  03-create-allowlist.sql  03_create-allowlist.sql  04-create-blacklist.sql  04_create-blacklist.sql  05-create-server.sql  05_create-server.sql  06-create-savedata.sql  06_create-savedata.sql  07_create-namehist.sql
db/src/tests/: sqlite.rs
discord/: Cargo.toml
discord/src/: autocomplete.rs  commands.rs  handler.rs  id.rs  lib.rs  render.rs  test.rs  utils.rs
discord/src/commands/: change_password.rs  rank.rs  stats.rs
discord/src/handler/: new_ip.rs
discord/src/render/: embed.rs  modal.rs
discord/src/utils/: notify.rs
nix/: default.nix
oauth/: Cargo.toml
oauth/src/: models.rs  routes.rs
src/: main.rs  store.rs
src/entities/: account.rs  connection.rs  discord_user.rs  map.rs  mod.rs  modpack.rs  nonce.rs  place.rs  prelude.rs  server.rs  session.rs  user.rs
src/migrator/: m20230503_000001_create_nonce_table.rs  m20230503_000002_create_account_table.rs  m20230503_000003_create_session_table.rs  m20230503_000004_create_user_table.rs  m20230503_000005_create_discord_user_table.rs  m20230503_000006_create_server_table.rs  m20230503_000007_create_connection_table.rs  m20230503_000008_create_modpack_table.rs  m20230503_000009_create_map_table.rs  m20230503_000010_create_place_table.rs  mod.rs
src/types/: LookVector.rs  WorldPos.rs  enums.rs  mod.rs
traits/: Cargo.toml
traits/src/: json.rs
