[package]
name = "api-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
sea-orm = { version = "^0.9.0", features = ["sqlx-sqlite", "runtime-async-std-rustls", "macros"] }
sea-orm-migration = "^0.9.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0" 