[workspace]

members = [
    "api", "oauth", "traits", "db"
]

resolver = "2"

[workspace.lints.clippy]

all = { level = "warn", priority = -1 }
needless_borrow = "deny"
manual_find = "deny"
map_identity = "deny"
assign_op_pattern = "deny"
clone_on_copy = "deny"
match_result_ok = "deny"
from_over_into = "deny"
map_clone = "deny"
redundant_closure_for_method_calls = "deny"
ptr_arg = "deny"
redundant_pattern_matching = "deny"
useless_format = "deny"


nursery = { level = "warn", priority = -1 }
missing_const_for_fn = "allow"
significant_drop_tightening = "allow"
derive_partial_eq_without_eq = "allow"
option_if_let_else = "allow"
use_self = "deny"
redundant_clone = "deny"
branches_sharing_code = "deny"
or_fun_call = "deny"

manual_string_new = "deny"
needless_pass_by_value = "deny"

allow_attributes_without_reason = "allow"
as_conversions = "warn"