[package]
name = "new-api-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

uuid = { version = "1.5.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"]} 
chrono = { version = "^0.4", features = [ "serde"]}
axum = {version = "0.6.20" }
axum-macros = "0.3.8"
bcrypt = "0.15.0"
tokio = { version = "1.33.0", features = ["full"] }
