[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite", "macros", "json", "uuid", "ipnetwork", "chrono" ] }
uuid = { version = "1.5.0", features = ["v4", "fast-rng", "serde" ] }
chrono = { version = "^0.4", features = [ "serde" ] }
futures = "0.3.30"
ipnet = "2.9.0"
serde = { version = "1.0.193", features = ["derive"] }
tracing = "0.1"
bcrypt = "0.15.0"